fixed overflow of bubbles

--- a/web/less/body.less
+++ b/web/less/body.less
@@ -639,6 +639,11 @@ body {
                         margin-bottom:4px;
                       }
 
+                      &.dateValue{
+                        width:135px;
+                        text-align:right;
+                      }
+
 					}
                     > div.confidentialStateMessage {
                       .descriptionFont;
